@@ -1,5 +1,9 @@
 2011-07-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/libYARP_OS/src/Port.cpp: Don't complain about names
+	of ports that don't require a network-reachable address.
+
+
 	* src/libYARP_OS/include/yarp/os/begin_pack_for_net.h
 	* src/libYARP_OS/include/yarp/os/end_pack_for_net.h:
 	fix for OSX (__DARWIN__ define is ancient?)
